# streamlit_github_desktop

./: pyproject.toml
src/streamlit_github_desktop/: __init__.py  main.py  script.py
